<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.editor.EditorFragment">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"

        android:elevation="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.dusk73.noteeditor.custom_view.ScoreView
                android:id="@+id/scoreView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
>

            </com.dusk73.noteeditor.custom_view.ScoreView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"

        android:elevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/add_note_1"
            style="@style/ButtonStyle1"
            android:text="@string/note_whole" />

        <Button
            android:id="@+id/add_note_2"
            style="@style/ButtonStyle1"
            android:text="@string/note_half" />

        <Button
            android:id="@+id/add_note_4"
            style="@style/ButtonStyle1"
            android:text="@string/note_quarter" />

        <Button
            android:id="@+id/add_note_8"
            style="@style/ButtonStyle1"
            android:text="@string/note_eight" />

        <Button
            android:id="@+id/add_note_16"
            style="@style/ButtonStyle1"
            android:text="@string/note_16th" />

        <Button
            android:id="@+id/add_note_32"
            style="@style/ButtonStyle1"
            android:text="@string/note_32nd" />

        <Button
            android:id="@+id/add_note_64"
            style="@style/ButtonStyle1"
            android:text="@string/note_64th" />

        <Button
            android:id="@+id/add_rest"
            style="@style/ButtonStyle1"
            android:text="@string/rest" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:elevation="0dp"
        android:orientation="horizontal"

        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/add_sharp"
            style="@style/ButtonStyle1"
            android:text="@string/sharp" />

        <Button
            android:id="@+id/add_flat"
            style="@style/ButtonStyle1"
            android:text="@string/flat" />

        <Button
            android:id="@+id/add_natural"
            style="@style/ButtonStyle1"
            android:text="@string/natural" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"

        android:elevation="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/add_measure"
            style="@style/ButtonStyle1"
            android:text="+M"
            android:textSize="20sp" />

        <Button
            android:id="@+id/delete_measure"
            style="@style/ButtonStyle1"
            android:text="-M"
            android:textSize="20sp" />

        <Button
            android:id="@+id/add_part"
            style="@style/ButtonStyle1"
            android:text="+P"
            android:textSize="20sp" />

        <Button
            android:id="@+id/delete_part"
            style="@style/ButtonStyle1"
            android:text="-P"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:elevation="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/startStopPlaying"
            style="@style/ButtonStyle1"
            android:layout_width="64dp"
            android:text="@string/startPlay" />

        <Button
            android:id="@+id/delete_note"
            style="@style/ButtonStyle1"
            android:layout_width="50dp"
            android:layout_marginStart="11dp"
            android:text="@string/delete"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>